# H8PracticeKitSimulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  setup_run.bat  setup_run.sh
.github/workflows/: build.yml
assets/lang/: en_us.lang  ja_jp.lang
lang/: en_us.lang  ja_jp.lang
src/: CMakeLists.txt  cert.cpp  cert.h  download_file.cpp  download_file.h  entity.cpp  entity.hpp  file_browser.cpp  file_browser.hpp  font.cpp  font.h  graphics.cpp  graphics.h  lang.cpp  lang.h  log.cpp  log.h  main.cpp  network.cpp  network.h  project_version.h  utils.cpp  utils.h
src/emulator/: emulator.cpp  emulator.h
src/gui/: async_gui.cpp  async_gui.h  download_emulator_gui.cpp  download_emulator_gui.h  download_file_gui.cpp  download_file_gui.h  main_gui.cpp  main_gui.hpp
src/network/: cert.cpp  cert.h  dns.cpp  dns.hpp  download_file.cpp  download_file.h  http_get.cpp  http_get.hpp
src/utils/: future.hpp  mutex_guard.hpp  string.cpp  string.hpp  time.cpp  time.hpp
